
	* en/AtkSharp.xml: Added
	* en/GLibSharp.xml: Added
	* en/GdaSharp.xml: Added
	* en/GdkSharp.xml: Added
	* en/GladeSharp.xml: Added
	* en/GnomeDbSharp.xml: Added
	* en/GnomeSharp.xml: Added
	* en/GtkSharp.xml: Added
	* en/PangoSharp.xml: Added
	* en/GConf/ChangeSet.xml: Documented finalize
	* en/GConf/NotifyEventHandler.xml: Fixed ecma-style compliance

2003-10-13  John Luke  <jluke@cfl.rr.com>

	* en/*/*.xml: fix finalize signature (override not virtual)
	
2003-10-12  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/HTML.xml:  call begin before Editable = true, update links, normalize
	* makefile: add gtkhtml to update dirs
	* en/Gnome/PaperSelectorFlags.xml
	* en/Gnome/PrintButtons.xml
	* en/Gnome/PrintDialogFlags.xml
	* en/Gnome/PrintDialogRangeFlags.xml
	* en/GtkSharp/TextEventArgs.xml
	* en/GtkSharp/TextEventHandler.xml
	* en/GtkSharp/WidgetEventArgs.xml
	* en/GtkSharp/WidgetEventHandler.xml: add these
	
	* en/*/*.xml: run updater

	* en/Gtk/MessageDialog.xml:
	* en/Gtk/Menu.xml:
	* en/Gtk/AccelLabel.xml:
	* en/Gtk/Alignment.xml: remove IWrapper duplicates
	
2003-10-09  John Luke  <jluke@cfl.rr.com>

	* en/Gnome/About.xml: add note about destroy on close event

2003-10-05  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/TreeStore.xml: 
	* en/Gtk/TreeModel.xml: first pass through these two monsters
	
2003-10-04  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/Icon.xml
	* en/Gtk/ItemFactory.xml: Full docs.
	* en/Gtk/TODO: Added file with list of missing Gtk docs.

2003-10-03  John Luke  <jluke@cfl.rr.com>

	* en/Gnome/Popup.xml: documented w/ simple example
	* en/Gtk.Menu.xml: popup example and parameter fix

2003-09-25  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/Accessible.xml
	* en/Gtk/CellEditable.xml
	* en/Gtk/Drag.xml: Full docs.
	* en/Gtk/Widget.xml: Fixes and some updates.
	* en/Gtk/WidgetFlags.xml: Full doc.
	* en/Gtk/Window.xml: Fixes and some updates, still missing to document the properties.
