@@ -1,0 +1,31 @@
+<Namespace Name="GConf.PropertyEditors" FullName="GConf.PropertyEditors" FullNameSP="GConf.PropertyEditors" Maintainer="Mono">
+  <Docs>
+    <summary>
+    PropertyEditors which act as intermediaries between 
+    <see cref="N:GConf" /> and <see cref="N:Gtk" /> widgets. 
+    They are analoguous to the Controller of the MVC design pattern.  
+    </summary>
+    <remarks>
+      <para>
+      PropertyEditors do two things:
+      <ul>
+       <li>
+       They listen to GConf notifications, and update 
+       widgets to reflect any changes in a GConf setting.
+       </li>
+       <li>
+       They connect to the various "changed" signals on a widget, 
+       and update GConf to reflect the widget's current state.
+       </li>
+      </ul>
+      </para>
+      <para>
+      Also provided are a utility class called 
+      <see cref="T:GConf.PropertyEditors.EditorShell" />,
+      which exposes a simple API to automatically 
+      construct PropertyEditors for a 
+      <see cref="T:Glade.XML" /> UI.
+      </para>
+    </remarks>
+  </Docs>
+</Namespace>
