@@ -1,6 +1,6 @@
 <Namespace Name="GConf" FullName="GConf" FullNameSP="GConf" Maintainer="Mono">
   <Docs>
-    <summary>GConf is a process-transparent configuration database with a model-view-controller architecture</summary>
+    <summary>GConf is a process-transparent configuration database with a model-view-controller architecture.</summary>
     <remarks>
       <para>
 		 GConf is a system for storing configuration information, that is, key-value pairs. GConf provides a notification service so applications can be notified when a key's value is changed. GConf also allows for pluggable storage mechanisms (text files, databases, etc.); allows administrators to install default values; and allows application authors to document their configuration keys for the benefit of administrators.
