@@ -1,7 +1,7 @@
 <Namespace Name="Gnome" FullName="Gnome" FullNameSP="Gnome" Maintainer="Mono">
   <Docs>
     <summary>
-      GNU Network Object Model Environment
+      GNU Network Object Model Environment.
     </summary>
     <remarks>
       <para>
