@@ -11,6 +11,8 @@
 	* en/PangoSharp.xml: Added
 	* en/GConf/ChangeSet.xml: Documented finalize
 	* en/GConf/NotifyEventHandler.xml: Fixed ecma-style compliance
+	* en/GConf.PropertyEditors.xml: Added
+	* Makefile: checks if any changes are made to en/*.xml
 
 2003-10-13  John Luke  <jluke@cfl.rr.com>
 
